[package]
name = "services_grouping"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = {version = "0.24.0" }
diesel = { version = "2.1.4", features = ["uuid", "postgres"] }
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["serde", "v5"] }