[package]
name = "services_grouping"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = {version = "0.24.0" }
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
diesel = { version = "2.1.4", features = ["uuid", "postgres"] }
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["serde", "v5"] }