[package]
name = "services_grouping"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
calamine = {version = "0.24.0" }
chrono = { version = "0.4.37", features = ["serde"] }
diesel = { version = "2.1.4", features = ["uuid", "postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
log = "0.4.21"
magic-crypt = "3.1.13"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["serde", "v5"] }